components/radix-platform/radix-platform/networking/namespace.public-site.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: radix-public-site-prod
  labels:
    radix-app: radix-public-site
    radix-env: prod
