components/radix-platform/radix-platform/networking/httproute.public-site.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: public-site-at.custom-domain
  namespace: radix-public-site-prod
spec:
  hostnames:
    - "${dnsZone}"
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway
      namespace: istio-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: public-site
          port: 8080
          weight: 1
      filters:
        - responseHeaderModifier:
            add:
              - name: Strict-Transport-Security
                value: max-age=31536000; includeSubDomains
          type: ResponseHeaderModifier
      matches:
        - path:
            type: PathPrefix
            value: /
